# VEAF-foothold-checkpoint-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_v1.1.0.md  MIGRATION_v2.0.0.md  README.md  README_PLUGIN.md  RELEASE_NOTES.md  RELEASE_NOTES_1.0.1.md  ROADMAP.md  USERS.md  apply_instructions.json  campaigns.yaml  campaigns.yaml.example  config.plugins.foothold.yaml.example  config.yaml.example  fix_parens.py  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
openspec/changes/archive/2026-02-15-foothold-checkpoint-tool/: conversation.md
openspec/changes/archive/2026-02-16-dcsserverbot-integration/: SUMMARY.md  design.md  proposal.md  tasks.md
openspec/changes/dcsserverbot-integration/: design.md  tasks.md
openspec/changes/dcsserverbot-integration/specs/checkpoint-storage/: spec.md
openspec/changes/dcsserverbot-integration/specs/cli-interface/: spec.md
openspec/changes/fix-campaign-era-suffix-detection/: design.md  proposal.md  tasks.md
openspec/changes/fix-campaign-era-suffix-detection/specs/campaign-detection/: spec.md
openspec/changes/fix-campaign-era-suffix-detection/specs/checkpoint-import/: spec.md
openspec/changes/fix-campaign-era-suffix-detection/specs/checkpoint-restoration/: spec.md
openspec/changes/fix-campaign-era-suffix-detection/specs/configuration-management/: spec.md
openspec/changes/foothold-checkpoint-tool/: design.md  proposal.md  tasks.md
openspec/changes/foothold-checkpoint-tool/specs/campaign-detection/: spec.md
openspec/changes/foothold-checkpoint-tool/specs/checkpoint-import/: spec.md
openspec/specs/campaign-detection/: spec.md
openspec/specs/checkpoint-deletion/: spec.md
openspec/specs/checkpoint-import/: spec.md
openspec/specs/checkpoint-listing/: spec.md
openspec/specs/checkpoint-restoration/: spec.md
openspec/specs/checkpoint-storage/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/configuration-management/: spec.md
scripts/: build_plugin.py
src/foothold_checkpoint/: __init__.py  cli.py
src/foothold_checkpoint/core/: __init__.py  campaign.py  checkpoint.py  config.py  events.py  storage.py
src/foothold_checkpoint/plugin/: PLUGIN_USER_MANUAL_EN.md  PLUGIN_USER_MANUAL_FR.md  README.md  __init__.py  campaigns.yaml.example  commands.py  foothold-checkpoint.yaml.example  foothold_schema.yaml  formatters.py  listener.py  notifications.py  permissions.py  ui.py  version.py
src/foothold_checkpoint/plugin/schemas/: __init__.py  foothold-checkpoint_schema.yaml  plugin_config.py
tests/: __init__.py  conftest.py  test_campaign.py  test_checkpoint.py  test_cli.py  test_cli_delete.py  test_cli_errors.py  test_cli_import.py  test_cli_list.py  test_cli_restore.py  test_cli_save.py  test_config.py  test_integration.py  test_storage.py
tests/data/: config-test.yaml.example
tests/data/campaign_caucasus/202602050002/: FootHold_CA_CTLD_Save_Modern.csv  FootHold_CA_v0.2.lua  Foothold_CA_CTLD_FARPS_Modern.csv
tests/data/campaign_caucasus/202602122322/: FootHold_CA_v0.2.lua  FootHold_CA_v0.2_CTLD_Save.csv  FootHold_CA_v0.2_storage.csv
tests/data/foothold/: FootHold_CA_v0.2_CTLD_FARPS.csv  FootHold_CA_v0.2_CTLD_Save.csv  FootHold_CA_v0.2_Coldwar.lua  FootHold_CA_v0.2_storage.csv  FootHold_Germany_Modern_V0.1.lua  FootHold_SI_v0.3.lua  Foothold_CA_CTLD_FARPS_Coldwar.csv  Foothold_Germany_CTLD_Save_Modern.csv  Foothold_Ranks.lua  foothold_afghanistan_CTLD_Save.csv  foothold_afghanistan_storage.csv  foothold_persiangulf.lua  foothold_persiangulf_Coldwar.lua
(+35 files in other folders)
