[tool.poetry]
name = "foothold-checkpoint"
version = "1.0.0"
description = "CLI tool for managing DCS Foothold campaign checkpoints with integrity verification"
authors = ["VEAF <contact@veaf.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VEAF/VEAF-foothold-checkpoint-tool"
repository = "https://github.com/VEAF/VEAF-foothold-checkpoint-tool"
documentation = "https://github.com/VEAF/VEAF-foothold-checkpoint-tool#readme"
keywords = ["dcs", "foothold", "backup", "checkpoint", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Typing :: Typed",
]
packages = [
    { include = "foothold_checkpoint", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.0.0"
pyyaml = "^6.0"
pydantic = "^2.0.0"
# CRITICAL: Click 8.3.x breaks Typer 0.9.x help rendering (Parameter.make_metavar() TypeError)
# Keep at 8.1.7 until Typer releases a compatible version. See CONTRIBUTING.md for details.
click = "8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"
black = "^24.0.0"
mypy = "^1.8.0"
types-pyyaml = "^6.0.0"

[tool.poetry.scripts]
foothold-checkpoint = "foothold_checkpoint.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=foothold_checkpoint",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/foothold_checkpoint"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",  # unused arguments OK in tests
    "S101", # assert allowed in tests
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
